- adding 'ciBuild' project param to gate configuration of start/stop Hudson

--- a/build.gradle
+++ b/build.gradle
@@ -66,10 +66,14 @@ task runHudson {
 }
 
 test {
-    dependsOn runHudson
-    doLast {
-        internalKillHudson()
+    if (!project.hasProperty('ciBuild'))
+    {
+        dependsOn runHudson
+        doLast {
+            internalKillHudson()
+        }
     }
+
 }
 
 task wrapper(type: Wrapper) {
