--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin: 'project-report'
 apply plugin: 'maven'
+apply plugin: 'code-quality'
 
 buildscript {
     repositories {
