- cli install-plugin test fails due to existing Jenkins issues, adapting test to account for that - remove gradle.properties in favor of setting the HUDSON_HOME variable directly from the build script - version bump for software release

--- a/build.gradle
+++ b/build.gradle
@@ -42,22 +42,7 @@ dependencies {
 
 group = spec.group
 version = spec.version
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar, dependsOn: groovydoc) {
-    classifier = 'javadoc'
-    from groovydoc.destinationDir
-}
-
-artifacts {
-    archives sourcesJar
-    archives javadocJar
-}
-
+System.properties['HUDSON_HOME'] = "$buildDir/jenkins".toString() //force Jenkins to run within the build workspace
 
 test {
     dependsOn jettyRunWar
@@ -99,8 +84,19 @@ task wrapper(type: Wrapper) {
     gradleVersion = '1.0-milestone-8'
 }
 
-ideaModule {
-    downloadJavadoc = true
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: groovydoc) {
+    classifier = 'javadoc'
+    from groovydoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
 }
 
 idea{
