--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-    Generated from archetype; please customize.
--->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
@@ -13,7 +9,6 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <!-- works till 1.7.7. Also all 1.8.0 works -->
         <groovy.version>1.8.5</groovy.version>
         <gmaven.version>1.4</gmaven.version>
     </properties>
@@ -53,20 +48,18 @@
     <build>
         <plugins>
             <plugin>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.gmaven.runtime</groupId>
-                        <artifactId>gmaven-runtime-1.8</artifactId>
-                        <version>${gmaven.version}</version>
-                    </dependency>
-                </dependencies>
                 <groupId>org.codehaus.gmaven</groupId>
                 <artifactId>gmaven-plugin</artifactId>
                 <version>${gmaven.version}</version>
+                <configuration>
+                    <providerSelection>1.8</providerSelection>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
+                            <goal>generateStubs</goal>
                             <goal>compile</goal>
+                            <goal>generateTestStubs</goal>
                             <goal>testCompile</goal>
                         </goals>
                     </execution>
@@ -74,6 +67,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
